#Copyright (c) Microsoft. All rights reserved.
#Licensed under the MIT license. See LICENSE file in the project root for full license information.

cmake_minimum_required(VERSION 2.8)

add_subdirectory(iotdm_connect_unittests)
add_subdirectory(iotdm_dmlist_unittests)
add_subdirectory(iotdm_dispatchers_unittests)